<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Async C&amp;C</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="direction">Direction</string>
    <string name="speed">Speed</string>
    <string name="_0">0</string>
    
</resources>
