<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayPane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ToggleButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textOff="@string/start"
        android:textOn="@string/stop" />

    <Switch
        android:id="@+id/directionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_toLeftOf="@+id/speedEdit"
        android:checked="true"
        android:text="@string/direction"
        android:textOff="@string/left"
        android:textOn="@string/right"
        android:thumbTextPadding="20dp" />
    
    <TextView
        android:id="@+id/speedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/speedEdit"
        android:layout_alignParentLeft="true"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <SeekBar
        android:id="@+id/speedSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/directionButton"
        android:layout_below="@id/directionButton"
        android:layout_marginTop="11dp"
        android:layout_toRightOf="@+id/startButton" />
    
    <Space
        android:id="@+id/spacer"
        android:minWidth="10dp"
        android:layout_width="10dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/speedSlider" />
    
    <TextView
        android:id="@+id/directionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/directionButton"
        android:layout_alignLeft="@+id/spacer"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:text="@string/right"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/speedEdit"
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/speedSlider"
        android:layout_alignParentRight="true"
        android:ems="8"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speedLabel"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />
 
</RelativeLayout>